--- a/src/main/resources/static/partial/register.html
+++ b/src/main/resources/static/partial/register.html
@@ -40,7 +40,7 @@
 			</md-button>
 		</div>
 	</form>
-	</md-whiteframe> </md-content> </md-tab> <md-tab label="Address" ng-click="null"> <md-content
+	</md-whiteframe> </md-content> </md-tab> <md-tab label="Address"> <md-content
 		class="md-padding">
 	<h1 class="md-display-2">Address</h1>
 	<md-whiteframe class="md-whiteframe-5dp" flex-sm="45" flex-gt-sm="35"
@@ -101,7 +101,7 @@
 		</md-input-container>
 		<div>
 			<md-button class="md-raised md-primary" type="submit"
-				aria-label="Submit" title="Submit"> <md-icon>save</md-icon>
+				aria-label="Submit" title="Next"> <md-icon>navigate_next</md-icon>
 			</md-button>
 		</div>
 	</form>
@@ -177,13 +177,7 @@
 			<h2>{{ address.state }}</h2>
 			<p>State</p>
 		</div>
-		</md-list-item>
+		</md-list-item> </md-list>
 	</div>
-	</md-list>
-</div>
-</md-whiteframe>
-</md-content>
-</md-tab>
-</md-tabs>
-</md-content>
+	</md-whiteframe> </md-content> </md-tab> </md-tabs> </md-content>
 </div>
