--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
 <script src="js/controller/menu-controller.js"></script>
 <script src="js/controller/home-controller.js"></script>
 <script src="js/controller/register-controller.js"></script>
-<script src="js/controller/book-controller.js"></script>
+<script src="js/book/book-controller.js"></script>
 <style type="text/css">
 [ng\:cloak], [ng-cloak], .ng-cloak {
 	display: none !important;
