--- a/src/main/resources/static/partial/home.html
+++ b/src/main/resources/static/partial/home.html
@@ -1,39 +1,42 @@
+
 <div layout="row">
 	<md-toolbar class="md-primary md-hue-1">
-	<h2>IRPF App - Faça o teste agora !!</h2>
+	<h2>IRPF App</h2>
 	</md-toolbar>
 </div>
+<br>
 <div layout="row" layout-align="center center">
 	<div layout layout-align="center center">
 		<md-whiteframe class="md-whiteframe-1dp"> <md-card
 			md-theme="default" md-theme-watch> <md-card-title>
 		<md-card-title-text> <span class="md-headline">
-			Faça um teste ! </span> <span class="md-subhead">Conheça o aplicativo
-			sem necessidade de realizar um cadastro!</span> </md-card-title-text> <md-card-title-media>
-		<img src="images/calc.jpg" class="img-cards-home" alt="Teste" /> </md-card-title-media> </md-card-title> <md-card-actions
-			layout="row" layout-align="end center"> <md-button
+			<md-toolbar layout-align="center center">Faça um teste !</md-toolbar>
+		</span> <span class="home-card-subhead">Conheça o aplicativo sem necessidade
+			de realizar um cadastro!</span> </md-card-title-text> </md-card-title> <md-card-actions layout="row"
+			layout-align="center center"> <md-button
 			class="md-raised md-primary md-hue-3">Iniciar teste !</md-button> </md-card-actions> </md-card> </md-whiteframe>
 	</div>
+
 	<div layout layout-align="center center">
 		<md-whiteframe class="md-whiteframe-1dp"> <md-card
 			md-theme="default" md-theme-watch> <md-card-title>
 		<md-card-title-text> <span class="md-headline">
-			Cadastro Gratuíto ! </span> <span class="md-subhead">Faça o cadastro
-			gratuíto e garanta seu acesso!</span> </md-card-title-text> <md-card-title-media>
-		<img src="images/calc.jpg" class="img-cards-home" alt="Teste" /> </md-card-title-media> </md-card-title> <md-card-actions
-			layout="row" layout-align="end center"> <md-button
+			<md-toolbar layout-align="center center">Cadastro
+			Gratuíto !</md-toolbar>
+		</span> <span class="home-card-subhead">Faça o cadastro gratuíto e garanta
+			seu acesso!</span> </md-card-title-text> </md-card-title> <md-card-actions layout="row"
+			layout-align="center center"> <md-button
 			class="md-raised md-accent md-hue-3"
 			ng-click="hmCtrl.goto('/register')">Iniciar teste !</md-button> </md-card-actions> </md-card> </md-whiteframe>
 	</div>
 	<div layout layout-align="center center">
 		<md-whiteframe class="md-whiteframe-1dp"> <md-card
 			md-theme="default" md-theme-watch> <md-card-title>
-		<md-card-title-text> <span class="md-headline">
-			Plano Básico ! </span> <span class="md-subhead">Crie um Plano Básico
-			e tena acesso ao App Completo!</span> </md-card-title-text> <md-card-title-media>
-		<img src="images/calc.jpg" class="img-cards-home" alt="Teste" /> </md-card-title-media> </md-card-title> <md-card-actions
-			layout="row" layout-align="end center"> <md-button
+		<md-card-title-text> <span class="md-headline"><md-toolbar
+				layout-align="center center"> Plano Básico !</md-toolbar> </span> <span
+			class="home-card-subhead">Crie um Plano Básico e tena acesso ao App
+			Completo!</span> </md-card-title-text> </md-card-title> <md-card-actions layout="row"
+			layout-align="center center"> <md-button
 			class="md-raised md-warn md-hue-3">Iniciar teste !</md-button> </md-card-actions> </md-card> </md-whiteframe>
 	</div>
-
 </div>
