--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,7 @@
 		<md-toolbar class="menu-toolbar"
 			ng-controller="LoginController as loginCtrl">
 		<div class="md-toolbar-tools">
-			<span flex=""></span>
+			<div flex=""></div>
 			<div class="lock-size" layout="row" layout-align="center bottom">
 				<md-button aria-label="Home" class="md-raised"
 					ng-click="loginCtrl.goto('/home')"> <md-icon>home</md-icon>
@@ -54,15 +54,18 @@
 					class="md-raised md-primary md-hue-3"
 					ng-click="loginCtrl.goto('/register')" ng-show="!authenticated">
 				<md-icon>lock_open</md-icon> Register </md-button>
-				<md-button aria-label="Login" class="md-raised md-primary md-hue-3"
-					ng-click="loginCtrl.goto('/login-form')" ng-show="!authenticated">
-				<md-icon>account_circle</md-icon> Login </md-button>
-				<md-button aria-label="Logout" class="md-raised md-accent"
-					ng-click="loginCtrl.logout()" ng-show="authenticated"
-					title="{{userrrName}}"> <md-icon>power_settings_new</md-icon>
-				Logout</md-button>
 			</div>
-			<span flex=""> </span>
+			<md-button aria-label="Login" class="md-raised md-primary md-hue-3"
+				ng-click="loginCtrl.goto('/login-form')" ng-show="!authenticated">
+			<md-icon>account_circle</md-icon> Login </md-button>
+			<md-button aria-label="Logout" class="md-raised md-accent"
+				ng-click="loginCtrl.logout()" ng-show="authenticated"
+				title="{{userrrName}}"> <md-icon>power_settings_new</md-icon>
+			Logout</md-button>
+			<div ng-show="authenticated">
+				<h3>User: {{userrrName}}</h3>
+			</div>
+			<div flex=""></div>
 		</div>
 		</md-toolbar>
 		<md-divider></md-divider>
